Blazor work create and my screen create page added

--- a/GloboTicket.TicketManagement.App/Pages/Index.razor
+++ b/GloboTicket.TicketManagement.App/Pages/Index.razor
@@ -8,6 +8,10 @@
 
 <AuthorizeView>
     <Authorized>
+        <button @onclick="NavigateToWorkCreate">İŞ İLANI VER</button>
+        <br />
+        <button @onclick="NavigateToMyScreen">VİTRİNİMİ OLUŞTUR</button>
+        <br />
         <button @onclick="Logout">Logout</button>
     </Authorized>
     <NotAuthorized>
