--- a/GloboTicket.TicketManagement.App/Pages/Register.razor
+++ b/GloboTicket.TicketManagement.App/Pages/Register.razor
@@ -27,6 +27,10 @@
                     <InputText id="password" type="password" class="col-12 col-md-8 login-field" @bind-Value="RegisterViewModel.Password"></InputText>
                 </div>
                 <div class="input-group col mt-2">
+                    <label class="col-12 col-md-4 p-0" for="phoneNumber">Phone Number:</label>
+                    <InputText id="phoneNumber" class="col-12 col-md-8 login-field" @bind-Value="RegisterViewModel.PhoneNumber"></InputText>
+                </div>
+                <div class="input-group col mt-2">
                     <div class="offset-md-4">
                         <button class="m-2 p-2">Register</button>
                     </div>
