Work Create function is completed. Work Detail page is in progress.

--- a/GloboTicket.TicketManagement.App/Pages/WorkCreate.razor
+++ b/GloboTicket.TicketManagement.App/Pages/WorkCreate.razor
@@ -1,31 +1,51 @@
 ﻿@page "/work-create"
-@using GloboTicket.TicketManagement.App.ViewModels;
+
 <div class="mt-5 row">
     <div class="card col-12 col-lg-6 mr-auto ml-auto p-3">
         <h3 class="card-title">İlan Oluştur</h3>
         <div class="card-body">
-            <EditForm Model="@WorkViewModel">
+            <EditForm Model="@WorkViewModel" OnValidSubmit="CreateWorkButton">
                 <div class="input-group row mt-2">
                     <label class="col-12 col-md-4 p-0" for="Description">Açıklama:</label>
-                    <InputText id="DescriptionText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.Description" ></InputText>
+                    <InputText id="DescriptionText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.Description"></InputText>
                 </div>
                 <div class="input-group row mt-2">
                     <label class="col-12 col-md-4 p-0" for="City">İl:</label>
-                    <InputText id="CityText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.City"></InputText>
+                    @*<InputText id="CityText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.City"></InputText>*@
+                    <Select id="department" value ="@WorkViewModel.CityId"  @onchange="OnCityChanged" class="form-control">
+                        <option value=""></option>
+                        @foreach (var city in WorkViewModel.CityList)
+                        {
+                            <option value="@city.CityId">@city.Name</option>
+                        }
+                    </Select>
                 </div>
                 <div class="input-group row mt-2">
                     <label class="col-12 col-md-4 p-0" for="County">İlçe:</label>
-                    <InputText id="CountyText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.County"></InputText>
+                    @*<InputText id="CountyText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.County"></InputText>*@
+                    <InputSelect id="countyCombobox" @bind-Value="@WorkViewModel.CountyId" class="form-control">
+                        if (WorkViewModel.CountyList != null)
+                        {
+                        @foreach (var county in WorkViewModel.CountyList.ToList())
+                        {
+                            if (county != null)
+                            {
+                                <option value="@county.Id">@county.Name</option>
+                            }
+
+                        }
+                        }
+                    </InputSelect>
                 </div>
                 <div class="input-group row mt-2">
                     <label class="col-12 col-md-4 p-0" for="ExpireDate">Son Geçerlilik Tarih:</label>
                     <InputDate id="ExpireDateText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.ExpireDate"></InputDate>
                 </div>
                 <br />
-                <button @onclick="CreateWorkButton">İlan Ver</button>
+                <button class="m-2 p-2">CreateWorkButton</button>
                 <br />
-             </EditForm>
+            </EditForm>
         </div>
     </div>
-   
+
 </div>
