--- a/GloboTicket.TicketManagement.App/Pages/Index.razor
+++ b/GloboTicket.TicketManagement.App/Pages/Index.razor
@@ -1,4 +1,68 @@
 ﻿@page "/"
+<style type="text/css">
+    body {
+        margin-top: 20px;
+        background: #eee;
+    }
+
+    .btn {
+        margin-bottom: 5px;
+    }
+
+    .grid {
+        position: relative;
+        width: 100%;
+        background: #fff;
+        color: #666666;
+        border-radius: 2px;
+        margin-bottom: 25px;
+        box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.1);
+    }
+
+        .grid .grid-body {
+            padding: 15px 20px 15px 20px;
+            font-size: 0.9em;
+            line-height: 1.9em;
+        }
+
+    .search table tr td.rate {
+        color: #f39c12;
+        line-height: 50px;
+    }
+
+    .search table tr:hover {
+        cursor: pointer;
+    }
+
+    .search table tr td.image {
+        width: 50px;
+    }
+
+    .search table tr td img {
+        width: 50px;
+        height: 50px;
+    }
+
+    .search table tr td.rate {
+        color: #f39c12;
+        line-height: 50px;
+    }
+
+    .search table tr td.price {
+        font-size: 1.5em;
+        line-height: 50px;
+    }
+
+    .search #price1,
+    .search #price2 {
+        display: inline;
+        font-weight: 600;
+    }
+</style>
+
+    <script type="text/javascript">
+   
+</script>
 
 <h1 class="page-title">Welcome to the GloboTicket Ticket Management System!</h1>
 <br />
@@ -6,48 +70,201 @@
 
 <br />
 
-<AuthorizeView>
+<AuthorizeView Context="authContext">
     <Authorized>
-        <div>
+        <div class="container">
+            <div class="row">
+                 <div>
             
             <button class="btn btn-primary" @onclick="NavigateToWorkCreate">İŞ İLANI VER</button>
             <button class="btn btn-primary" @onclick="NavigateToMyScreen">VİTRİNİMİ OLUŞTUR</button>
             <button class="btn btn-primary" @onclick="Logout">Logout</button>
-        </div>
-       
 
-        @if (Works == null)
-        {
-            <p><em>Loading...</em></p>
-        }
-        else
-        {
-            <table>
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>Work name</th>
-                        <th>Work date</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var work in Works)
-                    {
-                        <tr>
-                            <td><img src="@(work.Id)" class="event-image" /></td>
-                            <td class="event-name">@work.Description</td>
-                            <td class="event-date">@work.ExpireDate.ToShortDateString() </td>
-                            <td>
-                                <a href="@($"workdetails/{work.Id}")" class="event-purchase-button btn">
-                                    <i class="fas fa-edit"></i>
-                                </a>
-                            </td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        }
+         
+        </div>
+                <div class="col-md-12">
+                    <div class="grid search">
+                        <div class="grid-body">
+                            <div class="row">
+                                <div class="col-md-3">
+                                <EditForm Context="editContext" Model="@FilterViewModel" OnValidSubmit="HandleValidSubmit">
+                                   
+                                        <h2 class="grid-title"><i class="fa fa-filter"></i> Filters</h2>
+                                        <hr>
+
+                                        <h4>By category:</h4>
+                                        @if (Citys == null)
+                                        {
+                                            <p><em>Loading...</em></p>
+                                        }
+                                        else
+                                        {
+                                        
+                                            <div class="row">
+                                                <span>Kategori</span>
+                                                <select class="form-control" @bind="@FilterViewModel.SelectedCategoryId">
+                                                    <option value="Seçiniz"></option>
+                                                    @foreach (var category in Categories)
+                                                    {
+                                                        <option value="@category.CategoryId"> @category.Name </option>
+                                                    }
+
+                                                </select>
+                                            </div>
+                                        }                                      
+
+                                      
+                                        @if (Citys == null)
+                                        {
+                                            <p><em>Loading...</em></p>
+                                        }
+                                        else
+                                        {
+                                            <div class="row">
+                                                <span>İl</span>
+                                                <select class="form-control" @onchange="CitySelected" >
+                                                    <option value="Seçiniz"></option>
+                                                    @foreach (var city in Citys)
+                                                    {
+                                                        <option value="@city.CityId"> @city.Name </option>
+                                                    }
+                                                </select>
+                                            </div>
+                                            <div class="row">
+                                                <span>İlçe</span>
+                                                <select class="form-control" @bind="@SelectedCountyId" >
+                                                    <option value="Seçiniz"></option>
+                                                    @if (SelectedCityId != 0)
+                                                    {
+                                                        @foreach (var county in Counties)
+                                                        {
+                                                            <option value="@county.Id"> @county.Name </option>
+                                                        }
+                                                    }
+
+                                                </select>
+                                            </div>
+                                         
+                                        }
+                                        <div class="padding"></div>
+                                        <h4>By date:</h4>
+                                        From
+                                        <div class="input-group date form_date">
+                                            <InputDate id="date" class="form-control col-sm-8" data-date-format="dd-MM-yyyy" @bind-Value="@FilterViewModel.FromDate"></InputDate>
+                                        <span class="input-group-addon bg-blue"><i class="fa fa-th"></i></span>
+                                        </div>
+                                        To
+                                         <div class="input-group date form_date">
+                                            <InputDate id="date" class="form-control col-sm-8" data-date-format="dd-MM-yyyy" @bind-Value="@FilterViewModel.ToDate"></InputDate>
+                                        <span class="input-group-addon bg-blue"><i class="fa fa-th"></i></span>
+                                            </div>
+                                      
+
+                                        <div class="padding"></div>
+
+                                       @*  <h4>By price:</h4>
+                                        Between <div id="price1">$300</div> to <div id="price2">$800</div>
+                                        <div class="slider-primary">
+                                            <div class="slider slider-horizontal" style="width: 152px;"><div class="slider-track"><div class="slider-selection" style="left: 30%; width: 50%;"></div><div class="slider-handle round" style="left: 30%;"></div><div class="slider-handle round" style="left: 80%;"></div></div><div class="tooltip top hide" style="top: -30px; left: 50.1px;"><div class="tooltip-arrow"></div><div class="tooltip-inner">300 : 800</div></div><input type="text" class="slider" value data-slider-min="0" data-slider-max="1000" data-slider-step="1" data-slider-value="[300,800]" data-slider-tooltip="hide"></div>
+                                        </div> *@
+
+                                        <div class="input-group col mt-2">
+                                            <span class="input-group-btn">
+                                                <button class="btn btn-primary" type="submit">Search</button>
+                                            </span>
+                                        </div>
+                                
+                                </EditForm>
+                                </div>
+                                <div class="col-md-9">
+                                    <h2><i class="fa fa-file-o"></i> Result</h2>
+                                    <hr>
+
+                                    <div class="input-group">
+                                        <input type="text" class="form-control" value="web development">
+                                        <span class="input-group-btn">
+                                            <button class="btn btn-primary" type="button"><i class="fa fa-search">Search</i></button>
+                                        </span>
+                                    </div>
+
+                                    <p>Showing all results matching "web development"</p>
+                                    <div class="padding"></div>
+                                   @*  <div class="row">
+
+                                        <div class="col-sm-6">
+                                            <div class="btn-group">
+                                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+                                                    Order by <span class="caret"></span>
+                                                </button>
+                                                <ul class="dropdown-menu" role="menu">
+                                                    <li><a href="#">Name</a></li>
+                                                    <li><a href="#">Date</a></li>
+                                                    <li><a href="#">View</a></li>
+                                                    <li><a href="#">Rating</a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-md-6 text-right">
+                                            <div class="btn-group">
+                                                <button type="button" class="btn btn-default active"><i class="fa fa-list"></i></button>
+                                                <button type="button" class="btn btn-default"><i class="fa fa-th"></i></button>
+                                            </div>
+                                        </div>
+                                    </div> *@
+
+                                    @if (Works == null)
+                                    {
+                                        <p><em>Loading...</em></p>
+                                    }
+                                    else
+                                    {
+                                         <div class="table-responsive">
+                                        <table class="table table-hover">
+                                        
+                                            <thead>
+                                                <tr>
+                                                    <th></th>
+                                                    <th>Work name</th>
+                                                    <th class="text-right">Work date</th>
+                                                    <th></th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                @foreach (var work in Works)
+                                                {
+                                                    <tr>
+                                                        <td class="image"><img src="https://www.bootdey.com/image/400x300/FF8C00" alt></td>
+                                                            <td class="product"><strong>@work.Description</strong><br></td>
+                                                        <td class="event-name"></td>
+                                                        <td class="event-date">@work.ExpireDate.ToShortDateString() </td>
+                                                        <td>
+                                                            <a href="@($"workdetails/{work.Id}")" class="event-purchase-button btn">
+                                                                <i class="fas fa-edit">Details</i>
+                                                            </a>
+                                                        </td>
+                                                    </tr>
+                                                }
+                                            </tbody>
+                                            </table>
+                                        </div>
+                                    }
+                            
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
+       
+       
+      
+        
 
     </Authorized>
     <NotAuthorized>
