--- a/GloboTicket.TicketManagement.App/Shared/NavMenu.razor
+++ b/GloboTicket.TicketManagement.App/Shared/NavMenu.razor
@@ -18,6 +18,9 @@
                 <NavLink class="list-group-item list-group-item-action" href="/ticketsales">
                     <span class="oi oi-list-rich" aria-hidden="true"></span> Sales
                 </NavLink>
+                <NavLink class="list-group-item list-group-item-action" href="/customer">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Sales
+                </NavLink>
             </Authorized>
         </AuthorizeView>
     </div>
