--- a/GloboTicket.TicketManagement.App/Pages/WorkCreate.razor
+++ b/GloboTicket.TicketManagement.App/Pages/WorkCreate.razor
@@ -4,7 +4,7 @@
     <div class="card col-12 col-lg-6 mr-auto ml-auto p-3">
         <h3 class="card-title">İlan Oluştur</h3>
         <div class="card-body">
-            <EditForm Model="@WorkViewModel" OnValidSubmit="CreateWorkButton">
+            <EditForm Model="@WorkViewModel" Context="editContext" OnValidSubmit="CreateWorkButton">
                 <div class="input-group row mt-2">
                     <label class="col-12 col-md-4 p-0" for="Description">Açıklama:</label>
                     <InputText id="DescriptionText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.Description"></InputText>
@@ -12,7 +12,7 @@
                 <div class="input-group row mt-2">
                     <label class="col-12 col-md-4 p-0" for="City">İl:</label>
                     @*<InputText id="CityText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.City"></InputText>*@
-                    <Select id="department" value ="@WorkViewModel.CityId"  @onchange="OnCityChanged" class="form-control">
+                    <Select id="cityCombobox" @onchange="OnCityChanged" class="form-control">
                         <option value=""></option>
                         @foreach (var city in WorkViewModel.CityList)
                         {
