İş giriş ekranına kategori seçeneği eklendi. İş detay ekranına kategori gösterimi sağlandı. İş detay ekranında mesaj atılailmesi için alan sağlandı. iş detay ekranında mesajların görüntülenmesi sağlandı.

--- a/GloboTicket.TicketManagement.App/Pages/Index.razor
+++ b/GloboTicket.TicketManagement.App/Pages/Index.razor
@@ -59,10 +59,10 @@
         font-weight: 600;
     }
 </style>
-
+@*
     <script type="text/javascript">
    
-</script>
+</script>*@
 
 <h1 class="page-title">Welcome to the GloboTicket Ticket Management System!</h1>
 <br />
