--- a/GloboTicket.TicketManagement.App/Pages/WorkDetails.razor
+++ b/GloboTicket.TicketManagement.App/Pages/WorkDetails.razor
@@ -5,7 +5,7 @@
     <div class="card col-12 col-lg-6 mr-auto ml-auto p-3">
         <h3 class="card-title">İlan Detayı</h3>
         <div class="card-body">
-            <EditForm Model="@WorkViewModel">
+            <EditForm Model="@WorkViewModel" OnValidSubmit="SendMessageButton">
                 <div class="input-group row mt-2">
                     <label class="col-12 col-md-4 p-0" for="Description">Açıklama:</label>
                     <InputText id="DescriptionText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.Description"></InputText>
@@ -29,7 +29,10 @@
                 <br />
                 <br />
                 <h3 class="card-title">Yeni Mesaj:</h3>
-                <InputTextArea @bind-Value="WorkViewModel.Description" Rows="2" Class="form-control" />
+                <InputTextArea @bind-Value="WorkViewModel.NewMessage" Rows="2" Class="form-control" />
+                <br />
+                <br />
+                <button class="m-2 p-2">SendMessageButton</button>
                 <br />
                 <br />
                 <br />
