--- a/GloboTicket.TicketManagement.App/Pages/WorkDetails.razor
+++ b/GloboTicket.TicketManagement.App/Pages/WorkDetails.razor
@@ -5,43 +5,50 @@
     <div class="card col-12 col-lg-6 mr-auto ml-auto p-3">
         <h3 class="card-title">İlan Detayı</h3>
         <div class="card-body">
-            <EditForm Model="@WorkViewModel" OnValidSubmit="SendMessageButton">
-                <div class="input-group row mt-2">
-                    <label class="col-12 col-md-4 p-0" for="Description">Açıklama:</label>
-                    <InputText id="DescriptionText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.Description"></InputText>
-                </div>
-                <div class="input-group row mt-2">
-                    <label class="col-12 col-md-4 p-0" for="Category">Kategori:</label>
-                    <InputText id="CategoryText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.CategoryName"></InputText>
-                </div>
-                <div class="input-group row mt-2">
-                    <label class="col-12 col-md-4 p-0" for="City">İl:</label>
-                    <InputText id="CityText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.City"></InputText>
-                </div>
-                <div class="input-group row mt-2">
-                    <label class="col-12 col-md-4 p-0" for="County">İlçe:</label>
-                    <InputText id="CountyText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.County"></InputText>
-                </div>
-                <div class="input-group row mt-2">
-                    <label class="col-12 col-md-4 p-0" for="ExpireDate">Son Geçerlilik Tarih:</label>
-                    <InputText id="ExpireDateText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.ExpireDateString"></InputText>
-                </div>
-                <br />
-                <br />
-                <h3 class="card-title">Yeni Mesaj:</h3>
-                <InputTextArea @bind-Value="WorkViewModel.NewMessage" Rows="2" Class="form-control" />
-                <br />
-                <br />
-                <button class="m-2 p-2">SendMessageButton</button>
-                <br />
-                <br />
-                <br />
-                <br />
-                <h3 class="card-title">İş Hakkındaki Mesajlar:</h3>
-                <div>
-                    @((MarkupString)WorkViewModel.WorkMessage)
-                </div>
-            </EditForm>
+            @if (WorkViewModel == null)
+            {
+                <p><em>Loading...</em></p>
+            }
+            else
+            {
+                <EditForm Context="editContext" Model="@WorkViewModel" OnValidSubmit="SendMessageButton">
+                    <div class="input-group row mt-2">
+                        <label class="col-12 col-md-4 p-0" for="Description">Açıklama:</label>
+                        <InputText id="DescriptionText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.Description"></InputText>
+                    </div>
+                    <div class="input-group row mt-2">
+                        <label class="col-12 col-md-4 p-0" for="Category">Kategori:</label>
+                        <InputText id="CategoryText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.CategoryName"></InputText>
+                    </div>
+                    <div class="input-group row mt-2">
+                        <label class="col-12 col-md-4 p-0" for="City">İl:</label>
+                        <InputText id="CityText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.City"></InputText>
+                    </div>
+                    <div class="input-group row mt-2">
+                        <label class="col-12 col-md-4 p-0" for="County">İlçe:</label>
+                        <InputText id="CountyText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.County"></InputText>
+                    </div>
+                    <div class="input-group row mt-2">
+                        <label class="col-12 col-md-4 p-0" for="ExpireDate">Son Geçerlilik Tarih:</label>
+                        <InputText id="ExpireDateText" class="col-12 col-md-8 login-field" @bind-Value="WorkViewModel.ExpireDateString"></InputText>
+                    </div>
+                    <br />
+                    <br />
+                    <h3 class="card-title">Yeni Mesaj:</h3>
+                    <InputTextArea @bind-Value="WorkViewModel.NewMessage" Rows="2" Class="form-control" />
+                    <br />
+                    <br />
+                    <button class="m-2 p-2">SendMessageButton</button>
+                    <br />
+                    <br />
+                    <br />
+                    <br />
+                    <h3 class="card-title">İş Hakkındaki Mesajlar:</h3>
+                    <div>
+                        @((MarkupString)WorkViewModel.WorkMessage)
+                    </div>
+                </EditForm>
+            }
         </div>
     </div>
 
